--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "kim/activity": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "barryvdh/laravel-debugbar": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
