--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "phpro/grumphp": "^0.9.6",
+        "squizlabs/php_codesniffer": "^2.7"
     },
     "autoload": {
         "classmap": [
