[staging] Notes preparation

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ DB_PASSWORD=secret
 S3_KEY=AKIAJWTIJZI6JKGGHQDA
 S3_SECRET=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
 S3_REGION=eu-west-1
-S3_BUCKET=local.orestis.seksvriend
+S3_BUCKET=local.tolis.seksvriend
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
