--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2"
+    "laravel-elixir-webpack-official": "^1.0.2",
+    "bootstrap-markdown": "^2.10.0"
   },
   "devDependencies": {
+    "admin-lte": "^2.3.6",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3",
-    "admin-lte": "^2.3.6"
+    "vue-resource": "^1.0.3"
   }
 }
