--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "predis/predis": "^1.1",
         "barryvdh/laravel-debugbar": "^2.3",
         "fzaninotto/faker": "~1.4",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "graham-campbell/markdown": "^7.1"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
