--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
         "phpro/grumphp": "^0.9.6",
-        "squizlabs/php_codesniffer": "^2.7"
+        "squizlabs/php_codesniffer": "^2.7",
+        "barryvdh/laravel-ide-helper": "^2.3.2"
     },
     "autoload": {
         "classmap": [
