--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,7 @@
         "symfony/dom-crawler": "3.1.*",
         "phpro/grumphp": "^0.9.6",
         "squizlabs/php_codesniffer": "^2.7",
-        "barryvdh/laravel-ide-helper": "^2.3.2",
-        "phploc/phploc": "^3.0",
-        "phpmetrics/phpmetrics": "^2.2"
+        "barryvdh/laravel-ide-helper": "^2.3.2"
     },
     "autoload": {
         "classmap": [
