--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery-ui": "^1.12.1",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "font-awesome": "^4.7.0"
   }
 }
