[develop] fixes, logged out layout, improvements payments, docblocks

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+TARGETPAY_LAYOUTCODE=xxxxx
+TARGETPAY_KLANTCODE=xxxxx
+TARGETPAY_TEST=false
+TARGETPAY_DEBUG=true
