--- a/grumphp.yml
+++ b/grumphp.yml
@@ -5,3 +5,4 @@ parameters:
       phpcs:
         standard: PSR2
         ignore_patterns: [./tests/*, ./resources/*, ./database/*, ./bootstrap/*, ./public/*, ./app/Helpers/ccampbell/*, ./vendor/*, ./_ide_helper.php]
+      phpunit: ~
