--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "jquery": "^3.1.1",
+    "jquery-ui-dist": "^1.12.1",
     "bootstrap-sass": "^3.3.7",
     "axios": "^0.16.2",
     "cross-env": "^5.0.1",
