--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=457878fd939edb55e491",
+    "/css/app.css": "/css/app.css?id=9dce7a99101f1e4cbb8a",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=d2c6ba00591230a15af2",
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=c3d62ef66715dd6c5040"
 }
