[staging] fixeduser images and edit

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DB_PASSWORD=secret
 DB_DATABASE_TEST=dating_test
 DB_TEST_DRIVER=mysql
 
+S3_KEY=
+S3_SECRET=
+S3_REGION=eu-west-1
+S3_BUCKET=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
