--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /vendor
 /node_modules
 .idea
+public/admin
+public/img
 public/css
 public/js
-public/img
 public/build
-styleguide
+public/styleguide
 .env
