--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
-    "bootstrap-markdown": "^2.10.0"
+    "bootstrap-markdown": "^2.10.0",
+    "font-awesome": "^4.7.0",
+    "jquery-autocomplete": "^1.2.1",
+    "kss": "^3.0.0-beta.18"
   },
   "devDependencies": {
     "admin-lte": "^2.3.11",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
-    "vue-resource": "^1.0.3",
-    "font-awesome": "^4.7.0",
-    "jquery-autocomplete": "^1.2.1",
-    "kss": "^3.0.0-beta.18"
+    "vue-resource": "^1.0.3"
   }
 }
