--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.1.0",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-vue-2": "^0.2.0",
