--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fzaninotto/faker": "~1.4",
         "intervention/image": "^2.3",
         "graham-campbell/markdown": "^7.1",
-        "tpweb/targetpay": "1.3.0"
+        "tpweb/targetpay": "1.3.0",
+        "rap2hpoutre/laravel-log-viewer": "^0.10.4"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
