--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
     "dev": "gulp watch"
   },
   "dependencies": {
-    "jquery": "^3.1.0",
+    "axios": "^0.16.2",
+    "bootstrap-markdown": "^2.10.0",
     "bootstrap-sass": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
+    "jquery": "^3.1.0",
+    "jquery-autocomplete": "^1.2.1",
+    "kss": "^3.0.0-beta.18",
+    "laravel-echo": "^1.3.2",
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir-vueify": "^2.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
-    "bootstrap-markdown": "^2.10.0",
-    "font-awesome": "^4.7.0",
-    "jquery-autocomplete": "^1.2.1",
-    "kss": "^3.0.0-beta.18"
+    "pusher-js": "^4.1.0"
   },
   "devDependencies": {
     "admin-lte": "^2.3.11",
