--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "intervention/image": "^2.3",
         "graham-campbell/markdown": "^7.1",
         "tpweb/targetpay": "1.3.0",
-        "rap2hpoutre/laravel-log-viewer": "^0.10.4"
+        "rap2hpoutre/laravel-log-viewer": "^0.10.4",
+        "bogardo/mailgun": "^5.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
