--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Z0e/I5EeVMPIrN0uNeTnCHP2VWvYDEIo2jODFfMCktc=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,38 +7,34 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=dating
 DB_USERNAME=homestead
 DB_PASSWORD=secret
-DB_DATABASE_TEST=dating_test
-DB_TEST_DRIVER=mysql
 
-S3_KEY=
-S3_SECRET=
-S3_REGION=eu-west-1
-S3_BUCKET=
+S3_KEY=AKIAJWTIJZI6JKGGHQDA
+S3_SECRET=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
+S3_REGION=eu-west-2
+S3_BUCKET=local.orestis.altijdsex
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_DRIVER=mailgun
+MAILGUN_DOMAIN=sandbox9228c895deec48e493c649f8094bc905.mailgun.org
+MAILGUN_SECRET=key-ed9572d1713e3d7519c9ce968ac314c6
 
-PUSHER_APP_ID=
-PUSHER_KEY=
-PUSHER_SECRET=
-
-TARGETPAY_LAYOUTCODE=xxxxx
-TARGETPAY_KLANTCODE=xxxxx
-TARGETPAY_TEST=false
+TARGETPAY_LAYOUTCODE=141689
+TARGETPAY_KLANTCODE=129870
+TARGETPAY_TEST=true
 TARGETPAY_DEBUG=true
+
+PUSHER_APP_KEY=9db7f87140100f0bc1e8
+PUSHER_APP_SECRET=4f8693cb64a7e2f7d658
+PUSHER_APP_ID=383966
+PUSHER_CLUSTER=eu
