--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "private": true,
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
-  "dependencies": {
-    "axios": "^0.16.2",
-    "bootstrap-markdown": "^2.10.0",
-    "bootstrap-sass": "^3.3.7",
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.1.0",
-    "jquery-autocomplete": "^1.2.1",
-    "kss": "^3.0.0-beta.18",
-    "laravel-echo": "^1.3.2",
-    "laravel-elixir": "^6.0.0-11",
-    "laravel-elixir-browserify-official": "^0.1.3",
-    "laravel-elixir-vue-2": "^0.3.0",
-    "laravel-elixir-vueify": "^2.0.0",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "pusher-js": "^4.1.0"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "admin-lte": "^2.3.11",
-    "lodash": "^4.17.4",
-    "vue": "^2.4.1",
-    "vue-resource": "^1.0.3"
+    "axios": "^0.18",
+    "bootstrap-sass": "^3.3.7",
+    "bootstrap-markdown": "^2.10.0",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "jquery-autocomplete": "^1.2.1",
+    "laravel-mix": "^2.0",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.12",
+    "vue": "^2.5.17",
+    "laravel-echo": "^1.3.2",
+    "pusher-js": "^4.1.0",
+    "admin-lte": "^2.3.11"
   }
 }
