--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -12,7 +12,7 @@ services:
     tty: true
     environment:
       SERVICE_NAME: app
-      SERVICE_TAGS: dev
+      SERVICE_TAGS: staging
     working_dir: /var/www
     volumes:
       - ./:/var/www
@@ -48,7 +48,7 @@ services:
       MYSQL_PASSWORD: 12qwaszx
       MYSQL_DATABASE: dating
       MYSQL_ROOT_PASSWORD: 12qwaszx
-      SERVICE_TAGS: dev
+      SERVICE_TAGS: staging
       SERVICE_NAME: mysql
     volumes:
       - dbdata:/var/lib/mysql/
