--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "laravel-echo": "^1.3.2",
     "pusher-js": "^4.1.0",
     "admin-lte": "^2.3.11"
+  },
+  "dependencies": {
+    "vue-mq": "^0.2.1"
   }
 }
