--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=a4b72dfc6a9155736f92",
-    "/css/app.css": "/css/app.css?id=dde1ca47fe62283a7deb",
-    "/admin/css/plugins.css": "/admin/css/plugins.css?id=824472ff5ae8405f5079",
+    "/js/app.js": "/js/app.js?id=f1fcc4090ba4d015f684",
+    "/css/app.css": "/css/app.css?id=503c641aacbdbf6d46d1",
+    "/js/app.js.map": "/js/app.js.map?id=16e74a4fd0f53089cfda",
+    "/css/app.css.map": "/css/app.css.map?id=d06fc3c4d3c41c556a24",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
