--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=f1fcc4090ba4d015f684",
-    "/css/app.css": "/css/app.css?id=503c641aacbdbf6d46d1",
-    "/js/app.js.map": "/js/app.js.map?id=16e74a4fd0f53089cfda",
-    "/css/app.css.map": "/css/app.css.map?id=d06fc3c4d3c41c556a24",
-    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
-    "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js.map": "/js/app.js.map",
+    "/css/app.css.map": "/css/app.css.map"
 }
