--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/app.js": "/js/app.js?id=f1fcc4090ba4d015f684",
+    "/css/app.css": "/css/app.css?id=3c8c37f710458c1dd7a9",
+    "/js/app.js.map": "/js/app.js.map?id=0320c659e1881fd66f01",
+    "/css/app.css.map": "/css/app.css.map?id=d2825e98ec8dc08882dd",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
