--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -41,6 +41,7 @@ services:
     container_name: dating-mysql
     restart: unless-stopped
     tty: true
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - "3306:3306"
     environment:
