--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -15,7 +15,7 @@ services:
       SERVICE_TAGS: staging
     working_dir: /var/www
     volumes:
-      - /var/www/storage
+      - ./storage/:/var/www/storage
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - dating-network
