--- a/DockerfileProduction
+++ b/DockerfileProduction
@@ -43,11 +43,9 @@ RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
 
-# Set ownership of dirs
-RUN chown -R www:www\
-        /var/www/storage \
-        /var/www/bootstrap/cache
-        /var/www/vendor
+# Copy existing application directory permissions
+COPY --chown=www:www . /var/www
+RUN chown -R www:www /var/www
 
 # Change current user to www
 USER www
