--- a/DockerfileProduction
+++ b/DockerfileProduction
@@ -43,9 +43,11 @@ RUN useradd -u 1000 -ms /bin/bash -g www www
 # Copy existing application directory contents
 COPY . /var/www
 
-# Copy existing application directory permissions
-COPY --chown=www:www . /var/www
-RUN chown -R www:www /var/www
+# Set ownership of dirs
+RUN chown -R www:www\
+        /var/www/storage \
+        /var/www/bootstrap/cache
+        /var/www/vendor
 
 # Change current user to www
 USER www
