--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "admin-lte": "^2.3.11",
     "axios": "^0.18",
-    "bootstrap-sass": "^3.3.7",
     "bootstrap-markdown": "^2.10.0",
+    "bootstrap-sass": "^3.3.7",
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
     "jquery": "^3.2",
     "jquery-autocomplete": "^1.2.1",
+    "laravel-echo": "^1.3.2",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.5",
     "popper.js": "^1.12",
-    "vue": "^2.5.17",
-    "laravel-echo": "^1.3.2",
     "pusher-js": "^4.1.0",
-    "admin-lte": "^2.3.11"
+    "vue": "^2.5.17"
   },
   "dependencies": {
     "vue-mq": "^0.2.1"
