--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=772b8d1d8dfc89fa6030",
-    "/css/app.css": "/css/app.css?id=5947af764256395973cc",
+    "/js/app.js": "/js/app.js?id=1f57789a1a2609bcb0fd",
+    "/css/app.css": "/css/app.css?id=d620495fb0eb230b0659",
+    "/js/app.js.map": "/js/app.js.map?id=37a6bb0e84ff9fd30088",
+    "/css/app.css.map": "/css/app.css.map?id=6c9ee6eb07e6ceb5bd74",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
