--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=e6c8655646d32c12edbe",
-    "/css/app.css": "/css/app.css?id=3e220fe00cec81432a8f",
+    "/js/app.js": "/js/app.js?id=ae4345d52f306d4ad442",
+    "/css/app.css": "/css/app.css?id=1ca1bdb8e797f0420bc1",
+    "/js/app.js.map": "/js/app.js.map?id=c9e53cd81188bef60784",
+    "/css/app.css.map": "/css/app.css.map?id=31a6738c6d97d2772f51",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
