--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "fzaninotto/faker": "~1.4",
         "intervention/image": "^2.3",
         "graham-campbell/markdown": "^10.2",
-        "tpweb/targetpay": "1.3.0",
+        "tpweb/targetpay": "1.*",
         "rap2hpoutre/laravel-log-viewer": "^0.10.4",
         "pusher/pusher-php-server": "^3.0",
         "bogardo/mailgun": "^5.0",
