--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=c44c8c4398b938544009",
-    "/css/app.css": "/css/app.css?id=9033896c69544e0bdfe2",
+    "/js/app.js": "/js/app.js?id=4e6b2726094ad60c18ae",
+    "/css/app.css": "/css/app.css?id=5d74e1b8d208bb187531",
+    "/js/app.js.map": "/js/app.js.map?id=87db34ccc4ef7f920271",
+    "/css/app.css.map": "/css/app.css.map?id=62aea056c024f91214f2",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
