--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/app.js": "/js/app.js?id=bd1a58c1686a729aabed",
+    "/css/app.css": "/css/app.css?id=9f4758a2a42a1d78c928",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
