--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
-    "jquery": "^3.2",
+    "jquery": "^3.3.1",
     "jquery-autocomplete": "^1.2.1",
     "laravel-echo": "^1.3.2",
     "laravel-mix": "^2.0",
@@ -27,6 +27,7 @@
     "vue": "^2.5.17"
   },
   "dependencies": {
+    "jquery-ui": "^1.12.1",
     "vue-mq": "^0.2.1"
   }
 }
