--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=bd1a58c1686a729aabed",
-    "/css/app.css": "/css/app.css?id=9f4758a2a42a1d78c928",
+    "/js/app.js": "/js/app.js?id=3a0bdb524a9b749a7888",
+    "/css/app.css": "/css/app.css?id=6e6c64784bd13e19b053",
+    "/js/app.js.map": "/js/app.js.map?id=898cb5feef71a283c944",
+    "/css/app.css.map": "/css/app.css.map?id=a5fc9592b38dd5c8ee9f",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
-    "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=3b57c554b750a07ba6a2"
 }
