make sure google maps api is only called when the city is part of the list

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=970bf3ce340785bd483e",
-    "/css/app.css": "/css/app.css?id=8f82304259b635fd5ec8",
+    "/js/app.js": "/js/app.js?id=8a274781267d5928c62c",
+    "/css/app.css": "/css/app.css?id=6d136ab7d5cf62fe2037",
+    "/js/app.js.map": "/js/app.js.map?id=68d08934fccfa735c143",
+    "/css/app.css.map": "/css/app.css.map?id=fed4c881c34ae350bf2f",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
