--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -47,9 +47,9 @@ services:
       - "3306:3306"
     environment:
       MYSQL_USER: dating
-      MYSQL_PASSWORD: 12qwaszx
-      MYSQL_DATABASE: dating
-      MYSQL_ROOT_PASSWORD: 12qwaszx
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       SERVICE_TAGS: staging
       SERVICE_NAME: mysql
     volumes:
