--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,15 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+LOG_CHANNEL=single
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=dating-mysql
 DB_PORT=3306
-DB_DATABASE=dating
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=database
+DB_USERNAME=username
+DB_PASSWORD=password
+DB_TEST_DRIVER=mysql
 
 S3_KEY=AKIAJWTIJZI6JKGGHQDA
 S3_SECRET=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
@@ -26,15 +29,22 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=mailgun
-MAILGUN_DOMAIN=sandbox9228c895deec48e493c649f8094bc905.mailgun.org
-MAILGUN_SECRET=key-ed9572d1713e3d7519c9ce968ac314c6
+MAILGUN_DOMAIN=domain
+MAIL_HOST=host
+MAILGUN_SECRET=key
+MAIL_PORT=port
+MAIL_USERNAME=username
+MAIL_PASSWORD=password
+MAIL_ENCRYPTION=tls
 
-TARGETPAY_LAYOUTCODE=141689
-TARGETPAY_KLANTCODE=129870
+PUSHER_APP_ID=id
+PUSHER_KEY=key
+PUSHER_APP_SECRET=secret
+PUSHER_CLUSTER=eu
+
+TARGETPAY_LAYOUTCODE=code
+TARGETPAY_KLANTCODE=code
 TARGETPAY_TEST=true
 TARGETPAY_DEBUG=true
 
-PUSHER_APP_KEY=9db7f87140100f0bc1e8
-PUSHER_APP_SECRET=4f8693cb64a7e2f7d658
-PUSHER_APP_ID=383966
-PUSHER_CLUSTER=eu
+GOOGLE_MAPS_API_KEY=AIzaSyCTJTFJhkdxBp-9b1gVjf_cwV67ie-153Q
