--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,9 @@ services:
       - "3307:3306"
     environment:
       MYSQL_USER: dating
-      MYSQL_PASSWORD: 12qwaszx
-      MYSQL_DATABASE: dating
-      MYSQL_ROOT_PASSWORD: 12qwaszx
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
