--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=8d6b59307a9fc761d6c4",
-    "/css/app.css": "/css/app.css?id=4f0239d7547710184f97",
+    "/js/app.js": "/js/app.js?id=61039ddd8b89e6e1c661",
+    "/css/app.css": "/css/app.css?id=79f034cb63c6d5250131",
+    "/js/app.js.map": "/js/app.js.map?id=d39d692d16a2b18f231d",
+    "/css/app.css.map": "/css/app.css.map?id=4083872f594a2c506141",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
