--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/app.js": "/js/app.js?id=ed21bd07badc3cd198fa",
+    "/css/app.css": "/css/app.css?id=0250dfc01b1b764dd2f3",
+    "/js/app.js.map": "/js/app.js.map?id=74ccae5dfb0384acad40",
+    "/css/app.css.map": "/css/app.css.map?id=33771a7308bb8c3fb05f",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
