--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=c44c8c4398b938544009",
-    "/css/app.css": "/css/app.css?id=9033896c69544e0bdfe2",
+    "/js/app.js": "/js/app.js?id=a9ffe64c19a45fa13f75",
+    "/js/app.js.map": "/js/app.js.map?id=7322b47de9eec2c5cd98",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=6482681b36cbb6a592ca"
 }
