--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "admin-lte": "^2.3.11",
-    "axios": "^0.18",
+    "admin-lte": "^2.4.11",
+    "axios": "^0.19.0",
     "bootstrap-markdown": "^2.10.0",
     "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jquery-autocomplete": "^1.2.1",
     "laravel-echo": "^1.3.2",
     "laravel-mix": "^2.0",
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "jquery-ui": "^1.12.1",
+    "moment": "^2.24.0",
     "vue-mq": "^0.2.1"
   }
 }
