--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,12 @@
         "cornford/googlmapper": "2.*"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "mockery/mockery": "^1.0",
+        "filp/whoops": "^2.0",
+        "phpunit/phpunit": "^7.5",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
+        "nunomaduro/collision": "^3.0",
         "squizlabs/php_codesniffer": "^2.7",
         "barryvdh/laravel-ide-helper": "^2.3.2"
     },
