--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery-ui": "^1.12.1",
     "lodash.mergewith": "^4.6.2",
     "moment": "^2.24.0",
-    "vue-mq": "^0.2.1"
+    "vue-mq": "^0.2.1",
+    "vuejs-dialog": "^1.4.1"
   }
 }
