--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=af1a5b07d78f89cae4ba",
-    "/css/app.css": "/css/app.css?id=842be5c5de0afd28456f",
+    "/js/app.js": "/js/app.js?id=339ca2bd32c85aa9b7df",
+    "/css/app.css": "/css/app.css?id=621fb839d1ae324d7606",
+    "/js/app.js.map": "/js/app.js.map?id=c441976427e96b84ad41",
+    "/css/app.css.map": "/css/app.css.map?id=eeb23af733b2910e03f5",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
