--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "admin-lte": "^2.4.15",
+    "admin-lte": "^2.4.18",
     "axios": "^0.19.0",
     "bootstrap-markdown": "^2.10.0",
     "bootstrap-sass": "^3.4.1",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "cross-env": "^5.1",
+    "cross-env": "^5.2.1",
+    "fstream": "^1.0.12",
     "jquery": "^3.4.1",
     "jquery-autocomplete": "^1.2.1",
-    "laravel-echo": "^1.5.4",
+    "js-yaml": "3.13.1",
+    "laravel-echo": "^1.6.0",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
+    "pusher-js": "^4.1.0",
+    "tar": "^4.4.13",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10",
-    "pusher-js": "^4.1.0",
-    "js-yaml": "3.13.1",
-    "webpack-dev-server": "^3.7.2",
-    "fstream": "^1.0.12",
-    "tar": "^4.4.10"
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "jquery-ui": "^1.12.1",
     "lodash.mergewith": "^4.6.2",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "vue-mq": "^0.2.1",
     "vuejs-dialog": "^1.4.1"
   }
