--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=42a687dddf4ab0cf75a7",
-    "/css/app.css": "/css/app.css?id=9b5278532a2ec3f7cbc9",
+    "/js/app.js": "/js/app.js?id=2a41c58593c4df572ac4",
+    "/css/app.css": "/css/app.css?id=005533c1121fe7846bf2",
+    "/js/app.js.map": "/js/app.js.map?id=9f8c87254c3904aa6168",
+    "/css/app.css.map": "/css/app.css.map?id=38495516cf5213dacf80",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
