--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "bootstrap-markdown": "^2.10.0",
     "bootstrap-sass": "^3.4.1",
+    "bootstrap-datepicker": "^1.9.0",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "^5.2.1",
