--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,26 @@
-test_variable:
-  stage: test
+before_script:
+  - apt-get update -qq
+  - apt-get install -qq git
+  # Setup SSH deploy keys
+  - 'which ssh-agent || ( apt-get install -qq openssh-client )'
+  - eval $(ssh-agent -s)
+  - ssh-add <(echo "$SSH_PRIVATE_KEY")
+  - mkdir -p ~/.ssh
+  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+
+deploy_master:
+  environment:
+    name: production
   script:
-    - echo $SSH_PRIVATE_KEY
+    - ssh opalampo@188.166.18.52:22 "cd /home/opalampo/dating &&
+        git checkout master &&
+        git pull origin master &&
+        docker-compose -f docker-compose.production.yml build dating-app &&
+        docker-compose -f docker-compose.production.yml up -d &&
+        docker exec dating-app composer install --no-interaction --prefer-dist --optimize-autoloader &&
+        docker exec dating-app php artisan migrate --force &&
+        docker exec dating-app php artisan config:cache &&
+        docker exec dating-app php artisan route:cache &&
+        exit"
   only:
     - master
