--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=7574c3c80693108e7fa0",
-    "/css/app.css": "/css/app.css?id=e3ddf9363ae2524024b8",
-    "/js/app.js.map": "/js/app.js.map?id=679f76a687932f22e422",
-    "/css/app.css.map": "/css/app.css.map?id=b6d14a102c1ec3670e2c",
-    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
-    "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js.map": "/js/app.js.map",
+    "/css/app.css.map": "/css/app.css.map"
 }
