--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js.map": "/js/app.js.map",
-    "/css/app.css.map": "/css/app.css.map"
+    "/js/app.js": "/js/app.js?id=aab631795292e79de2c6",
+    "/css/app.css": "/css/app.css?id=4a0b2442f77af3e1e408",
+    "/js/app.js.map": "/js/app.js.map?id=05f4d351898a4d1743fb",
+    "/css/app.css.map": "/css/app.css.map?id=7bfa53cb734b99a8f929",
+    "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
