fix deployment issues

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ deploy_master:
         git pull origin master &&
         docker-compose -f docker-compose.production.yml build dating-app &&
         docker-compose -f docker-compose.production.yml up -d &&
-        docker exec dating-app rm -rf bootstrap/cache/*
+        docker exec dating-app rm -rf bootstrap/cache/* &&
         docker exec dating-app composer install --no-interaction --prefer-dist --optimize-autoloader &&
         docker exec dating-app php artisan migrate --force &&
         docker exec dating-app php artisan config:cache &&
@@ -33,7 +33,7 @@ deploy_master_no_docker:
     - ssh opalampo@178.62.249.225 "cd /var/www/dating &&
       git checkout master &&
       git pull origin master &&
-      docker exec dating-app rm -rf bootstrap/cache/*
+      rm -rf bootstrap/cache/* &&
       composer install --no-interaction --prefer-dist --optimize-autoloader &&
       php artisan migrate --force &&
       php artisan config:cache &&
