--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">= 7.1",
+        "php": ">=7.4",
         "laravel/framework": "5.8.*",
         "kim/activity": "^1.1",
         "league/flysystem-aws-s3-v3": "^1.0",
@@ -20,7 +20,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "php-http/guzzle6-adapter": "^1.1",
         "cornford/googlmapper": "2.*",
-        "grimthorr/laravel-toast": "^1.1"
+        "grimthorr/laravel-toast": "^1.1",
+        "stevebauman/location": "^5.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
