--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php-http/guzzle6-adapter": "^1.1",
         "cornford/googlmapper": "2.*",
         "grimthorr/laravel-toast": "^1.1",
-        "stevebauman/location": "^5.0"
+        "stevebauman/location": "^5.0",
+        "ext-SimpleXML": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
