--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=f44e8565128ec16e315f",
-    "/css/app.css": "/css/app.css?id=89cab4aac361744a43ff",
-    "/js/app.js.map": "/js/app.js.map?id=75bfb936fe9096c8cf84",
-    "/css/app.css.map": "/css/app.css.map?id=9147686c13de80cf9951",
+    "/js/app.js": "/js/app.js?id=55e6111ed05ca24a5a25",
+    "/css/app.css": "/css/app.css?id=ec8e946643fb0b53daee",
+    "/js/app.js.map": "/js/app.js.map?id=e3a4a8dac73bd9be8dbc",
+    "/css/app.css.map": "/css/app.css.map?id=4eef4d663d3852672d35",
+    "/js/lp.js": "/js/lp.js?id=3f22d2be90d1ef8e5156",
+    "/js/lp.js.map": "/js/lp.js.map?id=1b9dd4f331e3ecd8f64e",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
