--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=59456ae16b5aaef18c3f",
-    "/css/app.css": "/css/app.css?id=611133762e3ca68e9ec0",
-    "/js/lp.js": "/js/lp.js?id=589146a92a3aa7292e18",
+    "/js/app.js": "/js/app.js?id=5201d794c7f25336e1e4",
+    "/css/app.css": "/css/app.css?id=fcbd6fd6ddb09e1395c5",
+    "/js/app.js.map": "/js/app.js.map?id=551a614e1ee754015c44",
+    "/css/app.css.map": "/css/app.css.map?id=a6c0f0a864050c6dce75",
+    "/js/lp.js": "/js/lp.js?id=bd5c2345ad88775acb81",
+    "/js/lp.js.map": "/js/lp.js.map?id=e6e9f5a7857f38f787d2",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=f08b518f1770696398ef",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
 }
