--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ deploy_production:
       php artisan migrate --force &&
       php artisan config:cache &&
       php artisan route:cache &&
+      php artisan view:cache &&
       php artisan optimize &&
       php artisan queue:restart &&
       exit"
