--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "stevebauman/location": "^5.0",
         "ext-SimpleXML": "*",
         "spatie/geocoder": "^3.6",
-        "digiwallet/transaction-sdk": "^1.0"
+        "digiwallet/transaction-sdk": "^1.0",
+        "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
