send invisible images through admin

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=b8b344e32e000ad7698e",
-    "/css/app.css": "/css/app.css?id=614e8abf996a00168ce5",
-    "/js/lp.js": "/js/lp.js?id=bca2871ac177793f3538",
+    "/js/app.js": "/js/app.js?id=9462b267bbf9fd0e2748",
+    "/css/app.css": "/css/app.css?id=3cbacb7c0713a854749d",
+    "/js/app.js.map": "/js/app.js.map?id=677bb43062bd225be544",
+    "/css/app.css.map": "/css/app.css.map?id=b517f187a00d49c39274",
+    "/js/lp.js": "/js/lp.js?id=7035efd8a89bfa3b0748",
+    "/js/lp.js.map": "/js/lp.js.map?id=26d56771551f6e42c07a",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=c14806b2d7aee1a1597b",
-    "/admin/js/plugins.js": "/admin/js/plugins.js?id=a33f60342d4cc448b2b7"
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=3f0eb154d9139e2c1898"
 }
