--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=bb194bd61c1f3199fa1a",
-    "/css/app.css": "/css/app.css?id=ba91675aada4118b8be9",
-    "/js/lp.js": "/js/lp.js?id=3c3b1be135d04b1e2870",
+    "/js/app.js": "/js/app.js?id=78240d82071c162db809",
+    "/css/app.css": "/css/app.css?id=e6609b2fa31725962fa1",
+    "/js/app.js.map": "/js/app.js.map?id=80dfd3e396b7e0c1aca6",
+    "/css/app.css.map": "/css/app.css.map?id=99edcef30b1776abd45c",
+    "/js/lp.js": "/js/lp.js?id=0d73aa6a4ccf01516e44",
+    "/js/lp.js.map": "/js/lp.js.map?id=ecb0792f832ca6a5b36d",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=e7f17f22ae082d279420",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=25f037c3fa80f6c81779"
 }
