--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "spatie/geocoder": "^3.6",
         "digiwallet/transaction-sdk": "^1.0",
         "yoeunes/toastr": "^1.2",
-        "symfony/process": "^4.4.4"
+        "symfony/process": "^4.4.4",
+        "doctrine/dbal": "^2.10"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
