--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "pusher/pusher-php-server": "^3.0",
         "guzzlehttp/guzzle": "^6.3",
         "php-http/guzzle6-adapter": "^1.1",
-        "cornford/googlmapper": "2.*",
+        "cornford/googlmapper": "^2.35.1",
         "grimthorr/laravel-toast": "^1.1",
         "stevebauman/location": "^5.0",
         "ext-SimpleXML": "*",
