--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "digiwallet/transaction-sdk": "^1.0",
         "yoeunes/toastr": "^1.2",
         "symfony/process": "^4.4.4",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "^2.10",
+        "consoletvs/charts": "6.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
