--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "yoeunes/toastr": "^1.2",
         "symfony/process": "^4.4.4",
         "doctrine/dbal": "^2.10",
-        "consoletvs/charts": "6.*"
+        "consoletvs/charts": "6.*",
+        "google/recaptcha": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
