--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,5 @@
     "/js/lp.js.map": "/js/lp.js.map?id=d034cb5ea98e0c2b8cac",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=30be8be4593c30732d8e",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=4b5a4a3317f1efc1e6c4",
-    "/admin/js/custom.js": "/admin/js/custom.js?id=a45da67c81c235b39050"
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=a45da67c81c235b39050"
 }
