--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,14 @@
 {
-    "/js/app.js": "/js/app.js?id=c5584bdaa83d67f80d4d",
+    "/js/app.js": "/js/app.js?id=4b2b684f0f466f101ea0",
     "/css/app.css": "/css/app.css?id=6f2d6f92135067b01d66",
-    "/js/app.js.map": "/js/app.js.map?id=a7fa281401e27c2b9712",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=7d469affc07ebd0f185f",
+    "/js/app.js.map": "/js/app.js.map?id=5bf1d0c468c6fbf0f108",
     "/css/app.css.map": "/css/app.css.map?id=ea65ad7c73db6045dcef",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
     "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
-    "/js/lp.js.map": "/js/lp.js.map?id=d034cb5ea98e0c2b8cac",
+    "/js/lp.js.map": "/js/lp.js.map?id=b84ce4568c9abbf83a5d",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=b1cd2b806100a4487559",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=db02649e21e621abc15e",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=30be8be4593c30732d8e",
-    "/admin/js/plugins.js": "/admin/js/plugins.js?id=1d27a50c20fb337af8b4",
-    "/admin/js/custom-3.js": "/admin/js/custom-3.js?id=2d9d46e302be4d99c320"
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
