--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,8 +7,8 @@
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
     "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
     "/js/lp.js.map": "/js/lp.js.map?id=3aaaf9c542b14089fb37",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=48293e2592ae388803aa",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=f83183ed1f4ae71db5aa",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=6b2af78e1131c7c3d621",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=abe5c1875ab937793e7c",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=c16f0b63821889c551a0",
-    "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=1eeded028ac5a296110a"
+    "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
