--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,8 +7,8 @@
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
     "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
     "/js/lp.js.map": "/js/lp.js.map?id=ae164b08075a4ab7da2b",
-    "/admin/js/custom.js": "/admin/js/custom.js?id=0d80d5feafa28948e7c4",
-    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=75d23694f312baad7962",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=2db4e428ce8244d672f5",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=7ad12f527c31582b2478",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=e1d53212ba9a8268f72e",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
