public chat final && stats

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,8 +7,8 @@
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=db3150abfbbc953c70c3",
     "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
     "/js/lp.js.map": "/js/lp.js.map?id=1eab74998cf3b940abf7",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=f761e1a28ec27db70613",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=66d47304624658d24de2",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=0a0294e96fc3d8225d8e",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=57a09e7e6a4be9818609",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
