--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,20 @@
 {
     "/js/app.js": "/js/app.js?id=d98cb3505867a75c83d4",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=f2204508e7d26dfcb8ca",
-    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=7a46cd3bc92e425f3271",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=4faa5c213787bafbf653",
-    "/js/app.js.map": "/js/app.js.map?id=731af331be3db1e5808e",
-    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=597a6842150d22a1848d",
-    "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=e8238f6de109a623cedd",
-    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=db3150abfbbc953c70c3",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c247d3af816bf56c1ac0",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=c9b000e8955532380562",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=863466346276a5ce3772",
+    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=3d73433ec68c93531f1a",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=4d6a20295e28ec4edc30",
+    "/js/app.js.map": "/js/app.js.map?id=1303ee7af9d100d31fa6",
+    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=a0101854a73750c473ae",
+    "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=27c1bbb94005e50f47c2",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=7ecc575e70121ab62a5f",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=49554c3a0f07e5fc427b",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=855d93bc6b08241ef782",
     "/js/lp.js": "/js/lp.js?id=4ce1cc21e2d67641fc71",
-    "/js/lp.js.map": "/js/lp.js.map?id=b4a901d9fcc7d0d1a805",
+    "/js/lp.js.map": "/js/lp.js.map?id=99cb2b8cf63033402845",
+    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=15775c9c50c0b2641dfa",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=e0a2e01e6f34bf9eb19d",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=fd57dacdf85dcd1d7cfa",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=95ffa20496e7e3c67251",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
