--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,18 +3,18 @@
     "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=df5c14ecbcde89f75b18",
     "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=5fc554a3fa98c599b6c2",
     "/admin/css/custom.css": "/admin/css/custom.css?id=4d6a20295e28ec4edc30",
-    "/js/app.js.map": "/js/app.js.map?id=540408e23e415dd3e67e",
+    "/js/app.js.map": "/js/app.js.map?id=5e784079eeb7f88bd8df",
     "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=8ec6fdf2406c6b6c14a8",
     "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=cd7d257b9309ba4fa585",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=7ecc575e70121ab62a5f",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=49554c3a0f07e5fc427b",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=21a31ffac725a1bb419c",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=ccc51fc03f559e0caba4",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=4807added57b7cbf6abb",
     "/js/lp.js": "/js/lp.js?id=4ce1cc21e2d67641fc71",
-    "/js/lp.js.map": "/js/lp.js.map?id=8a0ddb1e5c9dc6de92ed",
+    "/js/lp.js.map": "/js/lp.js.map?id=30fb5857bfee84eaedcd",
     "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=5bcfa4055e5ccde9d758",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=b9c8a51232915a48d33d",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=d9672298de424df2675d",
     "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=74c3aa93ae40911cfb7a",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=8192deca703588f468e6",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=c2e5e566b5b458e76009",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
