--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,18 +3,18 @@
     "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=cd787e64b885bf6caa2e",
     "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=3c810c831cd752be0430",
     "/admin/css/custom.css": "/admin/css/custom.css?id=4d6a20295e28ec4edc30",
-    "/js/app.js.map": "/js/app.js.map?id=c375f41a66b9bd7558df",
+    "/js/app.js.map": "/js/app.js.map?id=82160c5caf47c16de6b5",
     "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=9fd929bed27bd9049de0",
     "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=70b40348858a1e8e6ddd",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=7ecc575e70121ab62a5f",
-    "/admin/js/custom.js": "/admin/js/custom.js?id=ccc51fc03f559e0caba4",
-    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=731ed5789614e38a95dd",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=64f3626bf04cfeb3052c",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=7cf0d605d1f64b5a12af",
     "/js/lp.js": "/js/lp.js?id=4ce1cc21e2d67641fc71",
-    "/js/lp.js.map": "/js/lp.js.map?id=b219dced6ad87ccb657c",
+    "/js/lp.js.map": "/js/lp.js.map?id=50810d24a73f694dfe83",
     "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=5bcfa4055e5ccde9d758",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=3cdd6bd2dd4eaa25f894",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=134bb8b5b3ef2f467314",
     "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=74c3aa93ae40911cfb7a",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=09515a25b761a712be22",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=27989b6c7609f6b93fdf",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
