--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,8 +7,8 @@
     "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=9fd929bed27bd9049de0",
     "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=70b40348858a1e8e6ddd",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=7ecc575e70121ab62a5f",
-    "/admin/js/custom.js": "/admin/js/custom.js?id=8c31753bb8d10398a8fd",
-    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=b269c50c0ae235848c90",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c4e2f07109b435882003",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=97af18328f749d919da0",
     "/js/lp.js": "/js/lp.js?id=62cf3719adc3ef6f55f3",
     "/js/lp.js.map": "/js/lp.js.map?id=8c3346e2059fd4278535",
     "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=5bcfa4055e5ccde9d758",
