--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,8 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "process-timeout": 0
     },
     "extra": {
         "laravel": {
