fix keyword tracking && add deploy to new staging stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,9 @@ before_script:
   - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 
 stages:
-  - deploy_staging
-  - deploy_production
+  - deploy_staging_altijdsex_nl
+  - deploy_staging_liefdesdate_nl
+  - deploy_production_altijdsex_nl
 
 deploy_staging_altijdsex_nl:
   stage: deploy_staging_altijdsex_nl
