--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,12 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=4d01cf99a437d1186368",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=e9b26feea35a42f58863",
-    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=6574d0836b32e9b0f50e",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=e886003c8bffcd8f06f0",
-    "/js/lp.js": "/js/lp.js?id=ddfbb2c24a311486900d",
-    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=5e47acc69ec75ae14466",
-    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=3c04066bb2ec9831693f",
+    "/js/app.js": "/js/app.js?id=1d20d194583250e69216",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=82c64736f84a4d94e3fd",
+    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=b5533b8abecbe90b4ccd",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=e46e1be12e43f2aa95d8",
+    "/js/app.js.map": "/js/app.js.map?id=c4f5267f309fe25d3297",
+    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=9c1991f1efbe285f6295",
+    "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=c0f398125a8e131f0dcf",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=5dffca5111146e6c25b9",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c4e2f07109b435882003",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=d791a3e5ab308edbe808",
+    "/js/lp.js": "/js/lp.js?id=47170532ffdb47e8b8e2",
+    "/js/lp.js.map": "/js/lp.js.map?id=69dea4bdada52a1a917e",
+    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=595acd16a83f95a6b6e3",
+    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=53a8a136380e52e6a25f",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=4a7605ed4c459fae1099",
+    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=09af9daeac4e7d546062",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
-    "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=a16ca4520819357edd34"
+    "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
